fixed site alignment and the code worked to auto play on phone however have just learnt that it could be because it was in energy saver mode so reverting back to original code to see if it works

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@ body {
     font-family: 'Noto Serif', serif;
     font-family: 'Oswald', sans-serif;
     font-family: 'Quattrocento', serif;
-    
 }
 
 h1 {
@@ -13,7 +12,7 @@ h1 {
 }
 
 h4 {
-    font-family: 'Noto Serif', serif;
+    font-family: 'Quattrocento', serif;
 }
 
 a{
@@ -36,7 +35,7 @@ nav {
 }
 
 .s1 {
-    
+    padding: 1rem;
     background-color: black;
     width: 100%;
     height: 800px;
@@ -101,8 +100,10 @@ video:hover {
         padding: 0rem;
     }
 
-    .right {
-        width: 50%;
+
+
+    h1 {
+        font-size: 2rem;
     }
     
   }
